[DOCS-1151] Cleanup variables - maifests_url

--- a/calico/getting-started/kubernetes/minikube.mdx
+++ b/calico/getting-started/kubernetes/minikube.mdx
@@ -60,7 +60,7 @@ minikube start --network-plugin=cni --extra-config=kubeadm.pod-network-cidr=192.
 Install the Tigera {{prodname}} operator and custom resource definitions.
 
 ```batch
-kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
 ```
 
 :::note
@@ -79,7 +79,7 @@ if you have replaced `pod-network-cidr` you must change it in this file as well.
 :::
 
 ```batch
-kubectl create -f {{releases.0.manifests_url}}/manifests/custom-resources.yaml
+kubectl create -f {{manifestsUrl}}/manifests/custom-resources.yaml
 ```
 
 </TabItem>
@@ -94,7 +94,7 @@ minikube start --network-plugin=cni
 Install {{prodname}}.
 
 ```batch
-kubectl apply -f {{releases.0.manifests_url}}/manifests/calico.yaml
+kubectl apply -f {{manifestsUrl}}/manifests/calico.yaml
 ```
 
 </TabItem>
