--- a/calico/getting-started/kubernetes/self-managed-public-cloud/gce.mdx
+++ b/calico/getting-started/kubernetes/self-managed-public-cloud/gce.mdx
@@ -167,13 +167,13 @@ worker-2     NotReady   <none>   5s      v1.17.2
 On the controller, install {{prodname}} using the operator:
 
 ```
-kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
 ```
 
 Download the custom resources necessary to configure {{prodname}}
 
 ```
-curl {{releases.0.manifests_url}}/manifests/custom-resources.yaml -O
+curl {{manifestsUrl}}/manifests/custom-resources.yaml -O
 ```
 
 If you wish to customize the {{prodname}} install, customize the downloaded custom-resources.yaml manifest. Then create the manifest to install {{prodname}}.
