--- a/calico/operations/calicoctl/install.mdx
+++ b/calico/operations/calicoctl/install.mdx
@@ -413,26 +413,26 @@ Use the YAML that matches your datastore type to deploy the `calicoctl` containe
 - **etcd**
 
   ```batch
-  kubectl apply -f {{releases.0.manifests_url}}/manifests/calicoctl-etcd.yaml
+  kubectl apply -f {{manifestsUrl}}/manifests/calicoctl-etcd.yaml
   ```
 
   :::note
 
   You can also
-  [view the YAML in a new tab]({{releases.0.manifests_url}}/manifests/calicoctl-etcd.yaml).
+  [view the YAML in a new tab]({{manifestsUrl}}/manifests/calicoctl-etcd.yaml).
 
   :::
 
 - **Kubernetes API datastore**
 
   ```batch
-  kubectl apply -f {{releases.0.manifests_url}}/manifests/calicoctl.yaml
+  kubectl apply -f {{manifestsUrl}}/manifests/calicoctl.yaml
   ```
 
   :::note
 
   You can also
-  [view the YAML in a new tab]({{releases.0.manifests_url}}/manifests/calicoctl.yaml).
+  [view the YAML in a new tab]({{manifestsUrl}}/manifests/calicoctl.yaml).
 
   :::
 
