--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/hardway/the-calico-datastore.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/hardway/the-calico-datastore.mdx
@@ -38,7 +38,7 @@ In order to use Kubernetes as the {{prodname}} datastore, we need to define the 
 Download and examine the list of {{prodname}} custom resource definitions, and open it in a file editor.
 
 ```
-wget {{releases.0.manifests_url}}/manifests/crds.yaml
+wget {{manifestsUrl}}/manifests/crds.yaml
 ```
 
 Create the custom resource definitions in Kubernetes.
