--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -74,7 +74,7 @@ Before you get started, make sure you have downloaded and configured the [necess
 1. Install the operator.
 
    ```batch
-   kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
 1. Configure the {{prodname}} installation.
@@ -100,7 +100,7 @@ Before you get started, make sure you have downloaded and configured the [necess
 1. Install the {{prodname}} manifest.
 
    ```batch
-   kubectl apply -f {{releases.0.manifests_url}}/manifests/calico-vxlan.yaml
+   kubectl apply -f {{manifestsUrl}}/manifests/calico-vxlan.yaml
    ```
 
 1. Configure {{prodname}} to disable AWS src/dst checks.
