--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/minikube.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/minikube.mdx
@@ -60,7 +60,7 @@ minikube start --network-plugin=cni --extra-config=kubeadm.pod-network-cidr=192.
 Install the Tigera {{prodname}} operator and custom resource definitions.
 
 ```batch
-kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
 ```
 
 Install {{prodname}} by creating the necessary custom resource. For more information on configuration options available in this manifest, see [the installation reference](../../reference/installation/api.mdx).
@@ -73,7 +73,7 @@ if you have replaced `pod-network-cidr` you must change it in this file as well.
 :::
 
 ```batch
-kubectl create -f {{releases.0.manifests_url}}/manifests/custom-resources.yaml
+kubectl create -f {{manifestsUrl}}/manifests/custom-resources.yaml
 ```
 
 </TabItem>
@@ -88,7 +88,7 @@ minikube start --network-plugin=cni
 Install {{prodname}}.
 
 ```batch
-kubectl apply -f {{releases.0.manifests_url}}/manifests/calico.yaml
+kubectl apply -f {{manifestsUrl}}/manifests/calico.yaml
 ```
 
 </TabItem>
