--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/vpp/getting-started.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/vpp/getting-started.mdx
@@ -97,7 +97,7 @@ Before you get started, make sure you have downloaded and configured the [necess
 1. Now that you have an empty cluster configured, you can install the Tigera operator.
 
    ```batch
-   kubectl apply -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+   kubectl apply -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
 1. Then, you need to configure the {{prodname}} installation for the VPP dataplane. The yaml in the link below contains a minimal viable configuration for EKS. For more information on configuration options available in this manifest, see [the installation reference](../../../reference/installation/api.mdx).
@@ -159,7 +159,7 @@ DPDK provides better performance compared to the standard install but it require
 1. Now that you have an empty cluster configured, you can install the Tigera operator.
 
    ```batch
-   kubectl apply -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+   kubectl apply -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
 2. Then, you need to configure the {{prodname}} installation for the VPP dataplane. The yaml in the link below contains a minimal viable configuration for EKS. For more information on configuration options available in this manifest, see [the installation reference](../../../reference/installation/api.mdx).
@@ -252,7 +252,7 @@ For some hardware, the following hugepages configuration may enable VPP to use m
 1. Start by installing the Tigera operator on your cluster.
 
    ```batch
-   kubectl apply -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+   kubectl apply -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
 1. Then, you need to configure the {{prodname}} installation for the VPP dataplane. The yaml in the link below contains a minimal viable configuration for VPP. For more information on configuration options available in this manifest, see [the installation reference](../../../reference/installation/api.mdx).
