--- a/calico_versioned_docs/version-3.24/network-policy/istio/app-layer-policy.mdx
+++ b/calico_versioned_docs/version-3.24/network-policy/istio/app-layer-policy.mdx
@@ -86,7 +86,7 @@ kubectl patch installation default --type=merge -p '{"spec": {"flexVolumePath": 
 Apply the following to install the Calico CSI driver
 
 ```batch
-kubectl apply -f {{releases.0.manifests_url}}/manifests/csi-driver.yaml
+kubectl apply -f {{manifestsUrl}}/manifests/csi-driver.yaml
 ```
 
 ### Install Istio
@@ -128,21 +128,21 @@ The sidecar injector automatically modifies pods as they are created to work wit
 <TabItem label="Istio v1.10.x" value="Istio v1.10.x-0">
 
 ```batch
-curl {{releases.0.manifests_url}}/manifests/alp/istio-inject-configmap-1.10.yaml -o istio-inject-configmap.yaml
+curl {{manifestsUrl}}/manifests/alp/istio-inject-configmap-1.10.yaml -o istio-inject-configmap.yaml
 kubectl patch configmap -n istio-system istio-sidecar-injector --patch "$(cat istio-inject-configmap.yaml)"
 ```
 
-[View sample manifest]({{releases.0.manifests_url}}/manifests/alp/istio-inject-configmap-1.10.yaml)
+[View sample manifest]({{manifestsUrl}}/manifests/alp/istio-inject-configmap-1.10.yaml)
 
 </TabItem>
 <TabItem label="Istio v1.9.x" value="Istio v1.9.x-1">
 
 ```batch
-curl {{releases.0.manifests_url}}/manifests/alp/istio-inject-configmap-1.9.yaml -o istio-inject-configmap.yaml
+curl {{manifestsUrl}}/manifests/alp/istio-inject-configmap-1.9.yaml -o istio-inject-configmap.yaml
 kubectl patch configmap -n istio-system istio-sidecar-injector --patch "$(cat istio-inject-configmap.yaml)"
 ```
 
-[View sample manifest]({{releases.0.manifests_url}}/manifests/alp/istio-inject-configmap-1.9.yaml)
+[View sample manifest]({{manifestsUrl}}/manifests/alp/istio-inject-configmap-1.9.yaml)
 
 </TabItem>
 </Tabs>
@@ -155,10 +155,10 @@ Apply the following manifest to configure Istio to query {{prodname}} for applic
 <TabItem label="Istio v1.10.x and v1.9.x" value="Istio v1.10.x and v1.9.x-2">
 
 ```batch
-kubectl apply -f {{releases.0.manifests_url}}/manifests/alp/istio-app-layer-policy-envoy-v3.yaml
+kubectl apply -f {{manifestsUrl}}/manifests/alp/istio-app-layer-policy-envoy-v3.yaml
 ```
 
-[View sample manifest]({{releases.0.manifests_url}}/manifests/alp/istio-app-layer-policy-envoy-v3.yaml)
+[View sample manifest]({{manifestsUrl}}/manifests/alp/istio-app-layer-policy-envoy-v3.yaml)
 
 </TabItem>
 </Tabs>
