--- a/calico/getting-started/kubernetes/flannel/install-for-flannel.mdx
+++ b/calico/getting-started/kubernetes/flannel/install-for-flannel.mdx
@@ -43,7 +43,7 @@ The procedure differs according to your datastore type. Refer to the section tha
 1. Download the flannel networking manifest for the Kubernetes API datastore.
 
    ```batch
-   curl {{releases.0.manifests_url}}/manifests/canal.yaml -O
+   curl {{manifestsUrl}}/manifests/canal.yaml -O
    ```
 
 1. <PodCidrSed yaml='canal' />
@@ -72,7 +72,7 @@ etcd, complete the following steps.
 1. Download the {{prodname}} networking manifest.
 
    ```batch
-   curl {{releases.0.manifests_url}}/manifests/canal-etcd.yaml -O
+   curl {{manifestsUrl}}/manifests/canal-etcd.yaml -O
    ```
 
 1. <PodCidrSed yaml='canal-etcd' />
