--- a/calico/getting-started/kubernetes/kind.mdx
+++ b/calico/getting-started/kubernetes/kind.mdx
@@ -79,7 +79,7 @@ dev-worker2         Ready    <none>          4m   v1.25.0   172.18.0.3    <none>
 Install the {{prodname}} operator and custom resource definitions.
 
 ```batch
-kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
 ```
 
 :::note
@@ -98,7 +98,7 @@ if you have replaced `pod-network-cidr` you must change it in this file as well.
 :::
 
 ```batch
-kubectl create -f {{releases.0.manifests_url}}/manifests/custom-resources.yaml
+kubectl create -f {{manifestsUrl}}/manifests/custom-resources.yaml
 ```
 
 </TabItem>
@@ -107,13 +107,13 @@ kubectl create -f {{releases.0.manifests_url}}/manifests/custom-resources.yaml
 Install {{prodname}} by using the following command.
 
 ```batch
-kubectl apply -f {{releases.0.manifests_url}}/manifests/calico.yaml
+kubectl apply -f {{manifestsUrl}}/manifests/calico.yaml
 ```
 
 :::note
 
 You can also
-[view the YAML in a new tab]({{releases.0.manifests_url}}/manifests/calico.yaml).
+[view the YAML in a new tab]({{manifestsUrl}}/manifests/calico.yaml).
 
 :::
 
