--- a/calico/network-policy/istio/app-layer-policy.mdx
+++ b/calico/network-policy/istio/app-layer-policy.mdx
@@ -100,7 +100,7 @@ kubectl patch installation default --type=merge -p '{"spec": {"flexVolumePath": 
 Apply the following to install the Calico CSI driver
 
 ```batch
-kubectl apply -f {{releases.0.manifests_url}}/manifests/csi-driver.yaml
+kubectl apply -f {{manifestsUrl}}/manifests/csi-driver.yaml
 ```
 
 ### Install Istio
@@ -142,21 +142,21 @@ The sidecar injector automatically modifies pods as they are created to work wit
 <TabItem label="Istio v1.15.x" value="Istio v1.15.x-2">
 
 ```batch
-curl {{releases.0.manifests_url}}/manifests/alp/istio-inject-configmap-1.15.yaml -o istio-inject-configmap.yaml
+curl {{manifestsUrl}}/manifests/alp/istio-inject-configmap-1.15.yaml -o istio-inject-configmap.yaml
 kubectl patch configmap -n istio-system istio-sidecar-injector --patch "$(cat istio-inject-configmap.yaml)"
 ```
 
-[View sample manifest]({{releases.0.manifests_url}}/manifests/alp/istio-inject-configmap-1.15.yaml)
+[View sample manifest]({{manifestsUrl}}/manifests/alp/istio-inject-configmap-1.15.yaml)
 
 </TabItem>
 <TabItem label="Istio v1.10.x" value="Istio v1.10.x-3">
 
 ```batch
-curl {{releases.0.manifests_url}}/manifests/alp/istio-inject-configmap-1.10.yaml -o istio-inject-configmap.yaml
+curl {{manifestsUrl}}/manifests/alp/istio-inject-configmap-1.10.yaml -o istio-inject-configmap.yaml
 kubectl patch configmap -n istio-system istio-sidecar-injector --patch "$(cat istio-inject-configmap.yaml)"
 ```
 
-[View sample manifest]({{releases.0.manifests_url}}/manifests/alp/istio-inject-configmap-1.10.yaml)
+[View sample manifest]({{manifestsUrl}}/manifests/alp/istio-inject-configmap-1.10.yaml)
 
 </TabItem>
 </Tabs>
@@ -169,10 +169,10 @@ Apply the following manifest to configure Istio to query {{prodname}} for applic
 <TabItem label="Istio v1.15.x and v1.10.x" value="Istio v1.15.x and v1.10.x-4">
 
 ```batch
-kubectl apply -f {{releases.0.manifests_url}}/manifests/alp/istio-app-layer-policy-envoy-v3.yaml
+kubectl apply -f {{manifestsUrl}}/manifests/alp/istio-app-layer-policy-envoy-v3.yaml
 ```
 
-[View sample manifest]({{releases.0.manifests_url}}/manifests/alp/istio-app-layer-policy-envoy-v3.yaml)
+[View sample manifest]({{manifestsUrl}}/manifests/alp/istio-app-layer-policy-envoy-v3.yaml)
 
 </TabItem>
 </Tabs>
