--- a/calico/operations/upgrading/kubernetes-upgrade.mdx
+++ b/calico/operations/upgrading/kubernetes-upgrade.mdx
@@ -85,7 +85,7 @@ the output and then re-running the command without --dry-run to commit to the ch
 1. Download the {{version}} operator manifest.
 
    ```batch
-   curl {{releases.0.manifests_url}}/manifests/tigera-operator.yaml -O
+   curl {{manifestsUrl}}/manifests/tigera-operator.yaml -O
    ```
 
 1. Use the following command to initiate an upgrade.
@@ -101,19 +101,19 @@ the output and then re-running the command without --dry-run to commit to the ch
    **{{prodname}} for policy and networking**
 
    ```batch
-   curl {{releases.0.manifests_url}}/manifests/calico.yaml -O
+   curl {{manifestsUrl}}/manifests/calico.yaml -O
    ```
 
    **{{prodname}} for policy and flannel for networking**
 
    ```batch
-   curl {{releases.0.manifests_url}}/manifests/canal.yaml -O
+   curl {{manifestsUrl}}/manifests/canal.yaml -O
    ```
 
    **{{prodname}} for policy (advanced)**
 
    ```batch
-   curl {{releases.0.manifests_url}}/manifests/calico-policy-only.yaml -O
+   curl {{manifestsUrl}}/manifests/calico-policy-only.yaml -O
    ```
 
    :::note
@@ -170,13 +170,13 @@ the output and then re-running the command without --dry-run to commit to the ch
    **{{prodname}} for policy and networking**
 
    ```batch
-   curl {{releases.0.manifests_url}}/manifests/calico-etcd.yaml -O
+   curl {{manifestsUrl}}/manifests/calico-etcd.yaml -O
    ```
 
    **{{prodname}} for policy and flannel for networking**
 
    ```batch
-   curl {{releases.0.manifests_url}}/manifests/canal-etcd.yaml -O
+   curl {{manifestsUrl}}/manifests/canal-etcd.yaml -O
    ```
 
    :::note
@@ -247,7 +247,7 @@ take the following steps to upgrade the Dikastes sidecars running in your applic
    the full version string of your Istio install, for example `1.4.2`.
 
    ```batch
-   kubectl apply -f {{releases.0.manifests_url}}/manifests/alp/istio-inject-configmap-<your Istio version>.yaml
+   kubectl apply -f {{manifestsUrl}}/manifests/alp/istio-inject-configmap-<your Istio version>.yaml
    ```
 
 1. Once the new template is in place, newly created pods use the upgraded version of Dikastes. Perform a rolling update of each of your service deployments
