--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/k3s/multi-node-install.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/k3s/multi-node-install.mdx
@@ -97,13 +97,13 @@ curl -sfL https://get.k3s.io | K3S_URL=https://serverip:6443 K3S_TOKEN=mytoken s
 Install the {{prodname}} operator and custom resource definitions.
 
 ```batch
-kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
 ```
 
 Install {{prodname}} by creating the necessary custom resource. For more information on configuration options available in this manifest, see [the installation reference](../../../reference/installation/api.mdx).
 
 ```batch
-kubectl create -f {{releases.0.manifests_url}}/manifests/custom-resources.yaml
+kubectl create -f {{manifestsUrl}}/manifests/custom-resources.yaml
 ```
 
 :::note
@@ -119,13 +119,13 @@ you may need to change the default IP pool CIDR to match your pod network CIDR.
 Install {{prodname}} by using the following command.
 
 ```batch
-kubectl apply -f {{releases.0.manifests_url}}/manifests/calico.yaml
+kubectl apply -f {{manifestsUrl}}/manifests/calico.yaml
 ```
 
 :::note
 
 You can also
-[view the YAML in a new tab]({{releases.0.manifests_url}}/manifests/calico.yaml).
+[view the YAML in a new tab]({{manifestsUrl}}/manifests/calico.yaml).
 
 :::
 
