--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/quickstart.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/quickstart.mdx
@@ -89,13 +89,13 @@ The geeky details of what you get:
 1. Install the Tigera {{prodname}} operator and custom resource definitions.
 
    ```
-   kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
 1. Install {{prodname}} by creating the necessary custom resource. For more information on configuration options available in this manifest, see [the installation reference](../../reference/installation/api.mdx).
 
    ```
-   kubectl create -f {{releases.0.manifests_url}}/manifests/custom-resources.yaml
+   kubectl create -f {{manifestsUrl}}/manifests/custom-resources.yaml
    ```
 
    :::note
