--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
@@ -43,13 +43,13 @@ installed directly on the cluster as a Deployment, and is configured through one
 1. First, install the operator on your cluster.
 
    ```
-   kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
 1. Download the custom resources necessary to configure {{prodname}}
 
    ```
-   curl {{releases.0.manifests_url}}/manifests/custom-resources.yaml -O
+   curl {{manifestsUrl}}/manifests/custom-resources.yaml -O
    ```
 
    If you wish to customize the {{prodname}} install, customize the downloaded custom-resources.yaml manifest locally.
@@ -85,7 +85,7 @@ The option, **Kubernetes API datastore, more than 50 nodes** provides scaling us
 1. Download the {{prodname}} networking manifest for the Kubernetes API datastore.
 
    ```batch
-   curl {{releases.0.manifests_url}}/manifests/calico.yaml -O
+   curl {{manifestsUrl}}/manifests/calico.yaml -O
    ```
 
 1. <PodCidrSed yaml='calico' />
@@ -108,7 +108,7 @@ The geeky details of what you get:
 1. Download the {{prodname}} networking manifest for the Kubernetes API datastore.
 
    ```batch
-   curl {{releases.0.manifests_url}}/manifests/calico-typha.yaml -o calico.yaml
+   curl {{manifestsUrl}}/manifests/calico-typha.yaml -o calico.yaml
    ```
 
 1. <PodCidrSed yaml='calico' />
@@ -164,7 +164,7 @@ The **etcd** database is not recommended for new installs. However, it is an opt
 1. Download the {{prodname}} networking manifest for etcd.
 
    ```batch
-   curl {{releases.0.manifests_url}}/manifests/calico-etcd.yaml -o calico.yaml
+   curl {{manifestsUrl}}/manifests/calico-etcd.yaml -o calico.yaml
    ```
 
 1. <PodCidrSed yaml='calico' />
