--- a/calico_versioned_docs/version-3.24/operations/monitor/monitor-component-visual.mdx
+++ b/calico_versioned_docs/version-3.24/operations/monitor/monitor-component-visual.mdx
@@ -115,7 +115,7 @@ EOF
 Here you will create a configmap with Felix and Typha dashboards.
 
 ```batch
-kubectl apply -f {{releases.0.manifests_url}}/manifests/grafana-dashboards.yaml
+kubectl apply -f {{manifestsUrl}}/manifests/grafana-dashboards.yaml
 ```
 
 #### **3. Creating Grafana pod**
