--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/managed-public-cloud/aks.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/managed-public-cloud/aks.mdx
@@ -62,7 +62,7 @@ The geeky details of what you get:
 1. Install the operator.
 
    ```
-   kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
 1. Configure the {{prodname}} installation.
