--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/vpp/getting-started.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/vpp/getting-started.mdx
@@ -97,7 +97,7 @@ Before you get started, make sure you have downloaded and configured the [necess
 1. Now that you have an empty cluster configured, you can install the Tigera operator.
 
    ```batch
-   kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
    :::note
@@ -165,7 +165,7 @@ DPDK provides better performance compared to the standard install but it require
 1. Now that you have an empty cluster configured, you can install the Tigera operator.
 
    ```batch
-   kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
    :::note
@@ -264,7 +264,7 @@ For some hardware, the following hugepages configuration may enable VPP to use m
 1. Start by installing the Tigera operator on your cluster.
 
    ```batch
-   kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
    :::note
