--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/windows-calico/kubernetes/rancher.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/windows-calico/kubernetes/rancher.mdx
@@ -36,7 +36,7 @@ The following steps will outline the installation of {{prodname}} networking on 
 1. Install the Tigera {{prodname}} operator and custom resource definitions.
 
    ```
-   kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
+   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
    :::note
@@ -48,7 +48,7 @@ The following steps will outline the installation of {{prodname}} networking on 
 1. Download the necessary Installation custom resource.
 
    ```batch
-   wget {{releases.0.manifests_url}}/manifests/custom-resources.yaml
+   wget {{manifestsUrl}}/manifests/custom-resources.yaml
    ```
 
 1. Update the `calicoNetwork` options, ensuring that the correct pod CIDR is set. (Rancher uses `10.42.0.0/16` by default.)
