DOCS-1184: Fixes for OS helm chart links (#215)

--- a/calico/getting-started/kubernetes/helm.mdx
+++ b/calico/getting-started/kubernetes/helm.mdx
@@ -38,8 +38,8 @@ In this guide, you install the Tigera {{prodname}} operator and custom resource 
 
 1. Add the {{prodname}} helm repo:
 
-```
-helm repo add projectcalico https://projectcalico.docs.tigera.io/charts
+```batch
+helm repo add projectcalico https://docs.tigera.io/calico/charts
 ```
 
 ### Customize the Helm chart
