--- a/calico_versioned_docs/version-3.25/reference/installation/_api.mdx
+++ b/calico_versioned_docs/version-3.25/reference/installation/_api.mdx
@@ -920,7 +920,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.APIServerDeployment'>APIServerDeployment</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on  :</em>
   <a href='#operator.tigera.io/v1.APIServerSpec'>APIServerSpec</a>)
 </p>
 <p>APIServerDeployment is the configuration for the API server Deployment.</p>
@@ -965,7 +965,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.APIServerDeploymentContainer'>APIServerDeploymentContainer</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.APIServerDeploymentPodSpec'>APIServerDeploymentPodSpec</a>)
 </p>
 <p>APIServerDeploymentContainer is an API server Deployment container.</p>
@@ -1011,7 +1011,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.APIServerDeploymentInitContainer'>APIServerDeploymentInitContainer</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.APIServerDeploymentPodSpec'>APIServerDeploymentPodSpec</a>)
 </p>
 <p>APIServerDeploymentInitContainer is an API server Deployment init container.</p>
@@ -1056,7 +1056,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.APIServerDeploymentPodSpec'>APIServerDeploymentPodSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.APIServerDeploymentPodTemplateSpec'>APIServerDeploymentPodTemplateSpec</a>)
 </p>
 <p>APIServerDeploymentDeploymentPodSpec is the API server Deployment&rsquo;s PodSpec.</p>
@@ -1162,7 +1162,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.APIServerDeploymentPodTemplateSpec'>APIServerDeploymentPodTemplateSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.APIServerDeploymentSpec'>APIServerDeploymentSpec</a>)
 </p>
 <p>APIServerDeploymentPodTemplateSpec is the API server Deployment&rsquo;s PodTemplateSpec</p>
@@ -1207,7 +1207,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.APIServerDeploymentSpec'>APIServerDeploymentSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on: </em>
   <a href='#operator.tigera.io/v1.APIServerDeployment'>APIServerDeployment</a>)
 </p>
 <p>APIServerDeploymentSpec defines configuration for the API server Deployment.</p>
@@ -1252,7 +1252,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.APIServerSpec'>APIServerSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on: </em>
   <a href='#operator.tigera.io/v1.APIServer'>APIServer</a>)
 </p>
 <p>APIServerSpec defines the desired state of Tigera API server.</p>
@@ -1283,7 +1283,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.APIServerStatus'>APIServerStatus</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on: </em>
   <a href='#operator.tigera.io/v1.APIServer'>APIServer</a>)
 </p>
 <p>APIServerStatus defines the observed state of Tigera API server.</p>
@@ -1309,7 +1309,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.ApplicationLayerSpec'>ApplicationLayerSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.ApplicationLayer'>ApplicationLayer</a>)
 </p>
 <p>ApplicationLayerSpec defines the desired state of ApplicationLayer</p>
@@ -1337,7 +1337,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.ApplicationLayerStatus'>ApplicationLayerStatus</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on: </em>
   <a href='#operator.tigera.io/v1.ApplicationLayer'>ApplicationLayer</a>)
 </p>
 <p>ApplicationLayerStatus defines the observed state of ApplicationLayer</p>
@@ -1365,7 +1365,7 @@ Resource Types:
   BGPOption (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on: </em>
   <a href='#operator.tigera.io/v1.CalicoNetworkSpec'>CalicoNetworkSpec</a>)
 </p>
 <p>BGPOption describes the mode of BGP to use.</p>
@@ -1381,14 +1381,14 @@ Resource Types:
   CNIPluginType (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on: </em>
   <a href='#operator.tigera.io/v1.CNISpec'>CNISpec</a>)
 </p>
 <p>CNIPluginType describes the type of CNI plugin used.</p>
 <p>One of: Calico, GKE, AmazonVPC, AzureVNET</p>
 <h3 id='operator.tigera.io/v1.CNISpec'>CNISpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on: </em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>)
 </p>
 <p>CNISpec contains configuration for the CNI plugin.</p>
@@ -1444,7 +1444,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoKubeControllersDeployment'>CalicoKubeControllersDeployment</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>)
 </p>
 <p>CalicoKubeControllersDeployment is the configuration for the calico-kube-controllers Deployment.</p>
@@ -1489,7 +1489,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoKubeControllersDeploymentContainer'>CalicoKubeControllersDeploymentContainer</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoKubeControllersDeploymentPodSpec'>CalicoKubeControllersDeploymentPodSpec</a>)
 </p>
 <p>CalicoKubeControllersDeploymentContainer is a calico-kube-controllers Deployment container.</p>
@@ -1535,7 +1535,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoKubeControllersDeploymentPodSpec'>CalicoKubeControllersDeploymentPodSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoKubeControllersDeploymentPodTemplateSpec'>
     CalicoKubeControllersDeploymentPodTemplateSpec
   </a>)
@@ -1633,7 +1633,7 @@ Resource Types:
   CalicoKubeControllersDeploymentPodTemplateSpec
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoKubeControllersDeploymentSpec'>CalicoKubeControllersDeploymentSpec</a>)
 </p>
 <p>CalicoKubeControllersDeploymentPodTemplateSpec is the calico-kube-controllers Deployment&rsquo;s PodTemplateSpec</p>
@@ -1680,7 +1680,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoKubeControllersDeploymentSpec'>CalicoKubeControllersDeploymentSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoKubeControllersDeployment'>CalicoKubeControllersDeployment</a>)
 </p>
 <p>CalicoKubeControllersDeploymentSpec defines configuration for the calico-kube-controllers Deployment.</p>
@@ -1727,7 +1727,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoNetworkSpec'>CalicoNetworkSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>)
 </p>
 <p>CalicoNetworkSpec specifies configuration options for Calico provided pod networking.</p>
@@ -1883,7 +1883,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoNodeDaemonSet'>CalicoNodeDaemonSet</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>)
 </p>
 <p>CalicoNodeDaemonSet is the configuration for the calico-node DaemonSet.</p>
@@ -1928,7 +1928,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoNodeDaemonSetContainer'>CalicoNodeDaemonSetContainer</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoNodeDaemonSetPodSpec'>CalicoNodeDaemonSetPodSpec</a>)
 </p>
 <p>CalicoNodeDaemonSetContainer is a calico-node DaemonSet container.</p>
@@ -1974,7 +1974,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoNodeDaemonSetInitContainer'>CalicoNodeDaemonSetInitContainer</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoNodeDaemonSetPodSpec'>CalicoNodeDaemonSetPodSpec</a>)
 </p>
 <p>CalicoNodeDaemonSetInitContainer is a calico-node DaemonSet init container.</p>
@@ -2020,7 +2020,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoNodeDaemonSetPodSpec'>CalicoNodeDaemonSetPodSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoNodeDaemonSetPodTemplateSpec'>CalicoNodeDaemonSetPodTemplateSpec</a>)
 </p>
 <p>CalicoNodeDaemonSetPodSpec is the calico-node DaemonSet&rsquo;s PodSpec.</p>
@@ -2124,7 +2124,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoNodeDaemonSetPodTemplateSpec'>CalicoNodeDaemonSetPodTemplateSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoNodeDaemonSetSpec'>CalicoNodeDaemonSetSpec</a>)
 </p>
 <p>CalicoNodeDaemonSetPodTemplateSpec is the calico-node DaemonSet&rsquo;s PodTemplateSpec</p>
@@ -2169,7 +2169,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoNodeDaemonSetSpec'>CalicoNodeDaemonSetSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoNodeDaemonSet'>CalicoNodeDaemonSet</a>)
 </p>
 <p>CalicoNodeDaemonSetSpec defines configuration for the calico-node DaemonSet.</p>
@@ -2214,7 +2214,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSet'>CalicoWindowsUpgradeDaemonSet</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>)
 </p>
 <p>CalicoWindowsUpgradeDaemonSet is the configuration for the calico-windows-upgrade DaemonSet.</p>
@@ -2259,7 +2259,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSetContainer'>CalicoWindowsUpgradeDaemonSetContainer</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSetPodSpec'>CalicoWindowsUpgradeDaemonSetPodSpec</a>)
 </p>
 <p>CalicoWindowsUpgradeDaemonSetContainer is a calico-windows-upgrade DaemonSet container.</p>
@@ -2304,7 +2304,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSetPodSpec'>CalicoWindowsUpgradeDaemonSetPodSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSetPodTemplateSpec'>
     CalicoWindowsUpgradeDaemonSetPodTemplateSpec
   </a>)
@@ -2400,7 +2400,7 @@ Resource Types:
   CalicoWindowsUpgradeDaemonSetPodTemplateSpec
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSetSpec'>CalicoWindowsUpgradeDaemonSetSpec</a>)
 </p>
 <p>CalicoWindowsUpgradeDaemonSetPodTemplateSpec is the calico-windows-upgrade DaemonSet&rsquo;s PodTemplateSpec</p>
@@ -2445,7 +2445,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSetSpec'>CalicoWindowsUpgradeDaemonSetSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSet'>CalicoWindowsUpgradeDaemonSet</a>)
 </p>
 <p>CalicoWindowsUpgradeDaemonSetSpec defines configuration for the calico-windows-upgrade DaemonSet.</p>
@@ -2492,7 +2492,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.CertificateManagement'>CertificateManagement</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>appears on :</em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>)
 </p>
 <p>
@@ -2566,14 +2566,14 @@ Resource Types:
   ComponentName (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.ComponentResource'>ComponentResource</a>)
 </p>
 <p>ComponentName represents a single component.</p>
 <p>One of: Node, Typha, KubeControllers</p>
 <h3 id='operator.tigera.io/v1.ComponentResource'>ComponentResource</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>)
 </p>
 <p>
@@ -2622,7 +2622,7 @@ Resource Types:
   ConditionStatus (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.TigeraStatusCondition'>TigeraStatusCondition</a>)
 </p>
 <p>ConditionStatus represents the status of a particular condition. A condition may be one of: True, False, Unknown.</p>
@@ -2630,7 +2630,7 @@ Resource Types:
   ContainerIPForwardingType (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoNetworkSpec'>CalicoNetworkSpec</a>)
 </p>
 <p>ContainerIPForwardingType specifies whether the CNI config for container ip forwarding is enabled.</p>
@@ -2638,7 +2638,7 @@ Resource Types:
   EncapsulationType (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.IPPool'>IPPool</a>)
 </p>
 <p>EncapsulationType is the type of encapsulation to use on an IP pool.</p>
@@ -2647,14 +2647,14 @@ Resource Types:
   FIPSMode (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>)
 </p>
 <h3 id='operator.tigera.io/v1.HostPortsType'>
   HostPortsType (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoNetworkSpec'>CalicoNetworkSpec</a>)
 </p>
 <p>HostPortsType specifies host port support.</p>
@@ -2663,12 +2663,12 @@ Resource Types:
   IPAMPluginType (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.IPAMSpec'>IPAMSpec</a>)
 </p>
 <h3 id='operator.tigera.io/v1.IPAMSpec'>IPAMSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.CNISpec'>CNISpec</a>)
 </p>
 <p>IPAMSpec contains configuration for pod IP address management.</p>
@@ -2706,7 +2706,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.IPPool'>IPPool</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoNetworkSpec'>CalicoNetworkSpec</a>)
 </p>
 <table>
@@ -2795,7 +2795,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.Image'>Image</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.ImageSetSpec'>ImageSetSpec</a>)
 </p>
 <table>
@@ -2837,7 +2837,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.ImageSetSpec'>ImageSetSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.ImageSet'>ImageSet</a>)
 </p>
 <p>ImageSetSpec defines the desired state of ImageSet.</p>
@@ -2865,7 +2865,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.InstallationSpec'>InstallationSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.Installation'>Installation</a>,<a href='#operator.tigera.io/v1.InstallationStatus'>
     InstallationStatus
   </a>)
@@ -3283,7 +3283,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.InstallationStatus'>InstallationStatus</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.Installation'>Installation</a>)
 </p>
 <p>InstallationStatus defines the observed state of the Calico or Calico Enterprise installation.</p>
@@ -3371,7 +3371,7 @@ Resource Types:
   KubernetesAutodetectionMethod (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.NodeAddressAutodetection'>NodeAddressAutodetection</a>)
 </p>
 <p>KubernetesAutodetectionMethod is a method of detecting an IP address based on the Kubernetes API.</p>
@@ -3380,14 +3380,14 @@ Resource Types:
   LinuxDataplaneOption (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoNetworkSpec'>CalicoNetworkSpec</a>)
 </p>
 <p>LinuxDataplaneOption controls which dataplane is to be used on Linux nodes.</p>
 <p>One of: Iptables, BPF</p>
 <h3 id='operator.tigera.io/v1.LogCollectionSpec'>LogCollectionSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.ApplicationLayerSpec'>ApplicationLayerSpec</a>)
 </p>
 <table>
@@ -3442,12 +3442,12 @@ Resource Types:
   LogCollectionStatusType (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.LogCollectionSpec'>LogCollectionSpec</a>)
 </p>
 <h3 id='operator.tigera.io/v1.Metadata'>Metadata</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.APIServerDeployment'>APIServerDeployment</a>,<a href='#operator.tigera.io/v1.APIServerDeploymentPodTemplateSpec'>
     APIServerDeploymentPodTemplateSpec
   </a>,<a href='#operator.tigera.io/v1.CalicoKubeControllersDeployment'>CalicoKubeControllersDeployment</a>,<a href='#operator.tigera.io/v1.CalicoKubeControllersDeploymentPodTemplateSpec'>
@@ -3502,13 +3502,13 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.MonitorSpec'>MonitorSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.Monitor'>Monitor</a>)
 </p>
 <p>MonitorSpec defines the desired state of Tigera monitor.</p>
 <h3 id='operator.tigera.io/v1.MonitorStatus'>MonitorStatus</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.Monitor'>Monitor</a>)
 </p>
 <p>MonitorStatus defines the observed state of Tigera monitor.</p>
@@ -3536,7 +3536,7 @@ Resource Types:
   MultiInterfaceMode (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoNetworkSpec'>CalicoNetworkSpec</a>)
 </p>
 <p>MultiInterfaceMode describes the method of providing multiple pod interfaces.</p>
@@ -3545,14 +3545,14 @@ Resource Types:
   NATOutgoingType (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.IPPool'>IPPool</a>)
 </p>
 <p>NATOutgoingType describe the type of outgoing NAT to use.</p>
 <p>One of: Enabled, Disabled</p>
 <h3 id='operator.tigera.io/v1.NodeAddressAutodetection'>NodeAddressAutodetection</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.CalicoNetworkSpec'>CalicoNetworkSpec</a>)
 </p>
 <p>
@@ -3647,7 +3647,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.NodeAffinity'>NodeAffinity</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.TyphaAffinity'>TyphaAffinity</a>)
 </p>
 <p>NodeAffinity is similar to *v1.NodeAffinity, but allows us to limit available schedulers.</p>
@@ -3709,7 +3709,7 @@ Resource Types:
   NonPrivilegedType (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>)
 </p>
 <p>NonPrivilegedType specifies whether Calico runs as permissioned or not</p>
@@ -3726,7 +3726,7 @@ Resource Types:
   ProductVariant (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>,<a href='#operator.tigera.io/v1.InstallationStatus'>
     InstallationStatus
   </a>)
@@ -3744,7 +3744,7 @@ Resource Types:
   Provider (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>)
 </p>
 <p>
@@ -3755,7 +3755,7 @@ Resource Types:
   StatusConditionType (<code>string</code> alias)
 </h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.TigeraStatusCondition'>TigeraStatusCondition</a>)
 </p>
 <p>StatusConditionType is a type of condition that may apply to a particular component.</p>
@@ -3803,7 +3803,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.TigeraStatusCondition'>TigeraStatusCondition</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.TigeraStatusStatus'>TigeraStatusStatus</a>)
 </p>
 <p>TigeraStatusCondition represents a condition attached to a particular component.</p>
@@ -3896,13 +3896,13 @@ Resource Types:
 <p>TigeraStatusReason represents the reason for a particular condition.</p>
 <h3 id='operator.tigera.io/v1.TigeraStatusSpec'>TigeraStatusSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.TigeraStatus'>TigeraStatus</a>)
 </p>
 <p>TigeraStatusSpec defines the desired state of TigeraStatus</p>
 <h3 id='operator.tigera.io/v1.TigeraStatusStatus'>TigeraStatusStatus</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.TigeraStatus'>TigeraStatus</a>)
 </p>
 <p>TigeraStatusStatus defines the observed state of TigeraStatus</p>
@@ -3933,7 +3933,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.TyphaAffinity'>TyphaAffinity</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>)
 </p>
 <p>
@@ -3965,7 +3965,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.TyphaDeployment'>TyphaDeployment</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.InstallationSpec'>InstallationSpec</a>)
 </p>
 <p>TyphaDeployment is the configuration for the typha Deployment.</p>
@@ -4010,7 +4010,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.TyphaDeploymentContainer'>TyphaDeploymentContainer</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.TyphaDeploymentPodSpec'>TyphaDeploymentPodSpec</a>)
 </p>
 <p>TyphaDeploymentContainer is a typha Deployment container.</p>
@@ -4056,7 +4056,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.TyphaDeploymentInitContainer'>TyphaDeploymentInitContainer</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.TyphaDeploymentPodSpec'>TyphaDeploymentPodSpec</a>)
 </p>
 <p>TyphaDeploymentInitContainer is a typha Deployment init container.</p>
@@ -4102,7 +4102,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.TyphaDeploymentPodSpec'>TyphaDeploymentPodSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.TyphaDeploymentPodTemplateSpec'>TyphaDeploymentPodTemplateSpec</a>)
 </p>
 <p>TyphaDeploymentDeploymentPodSpec is the typha Deployment&rsquo;s PodSpec.</p>
@@ -4205,7 +4205,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.TyphaDeploymentPodTemplateSpec'>TyphaDeploymentPodTemplateSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.TyphaDeploymentSpec'>TyphaDeploymentSpec</a>)
 </p>
 <p>TyphaDeploymentPodTemplateSpec is the typha Deployment&rsquo;s PodTemplateSpec</p>
@@ -4250,7 +4250,7 @@ Resource Types:
 </table>
 <h3 id='operator.tigera.io/v1.TyphaDeploymentSpec'>TyphaDeploymentSpec</h3>
 <p>
-  (<em>Appears on:</em>
+  (<em>Appears on :</em>
   <a href='#operator.tigera.io/v1.TyphaDeployment'>TyphaDeployment</a>)
 </p>
 <p>TyphaDeploymentSpec defines configuration for the typha Deployment.</p>
