--- a/calico_versioned_docs/version-3.25/operations/decommissioning-a-node.mdx
+++ b/calico_versioned_docs/version-3.25/operations/decommissioning-a-node.mdx
@@ -23,7 +23,7 @@ of the following reasons.
 ## Purpose of this page
 
 Provide guidance on how to remove a host that is part of a {{prodname}} cluster
-and clean up the associated [Node resource][node resource reference]
+and clean up the associated [node resource reference](../reference/resources/node.mdx)
 information.
 
 ## Prerequisites
@@ -31,7 +31,7 @@ information.
 - Prior to removing any Node resource from the datastore the `{{nodecontainer}}`
   container should be stopped on the corresponding host and it should be
   ensured that it will not be restarted.
-- You must have [calicoctl configured][calicoctl setup] and operational to run
+- You must have [calicoctl setup](/operations/calicoctl/install.mdx) and operational to run
   the commands listed here.
 
 ## Removing a node resource
@@ -92,4 +92,4 @@ Below is an example of how to create a file of Nodes and delete them.
    calicoctl delete -f nodes_to_delete.yaml
    ```
 
-[Node resource reference]: ../reference/resources/node.mdx[calicoctl setup]: /maintenance/clis/calicoctl/install
+
