Adds demo manifests to static/files

--- a/calico/network-policy/istio/enforce-policy-istio.mdx
+++ b/calico/network-policy/istio/enforce-policy-istio.mdx
@@ -34,13 +34,13 @@ customer-facing web application, a microservice that serves up account
 summaries, and an [etcd](https://github.com/coreos/etcd) datastore.
 
 ```batch
-kubectl apply -f {{filesUrl}}/security/tutorials/app-layer-policy/manifests/10-yaobank.yaml
+kubectl apply -f https://docs.tigera.io/files/10-yaobank.yaml
 ```
 
 :::note
 
 You can also
-[view the manifest in your browser](/network-policy/tutorials/app-layer-policy/manifests/10-yaobank.yaml/).
+[view the manifest in your browser](/files/10-yaobank.yaml).
 
 :::
 
@@ -134,13 +134,15 @@ compromising private keys.
 
 We can mitigate both of the above deficiencies with a {{prodname}} policy.
 
-    wget {{filesUrl}}/security/tutorials/app-layer-policy/manifests/30-policy.yaml
-    calicoctl create -f 30-policy.yaml
+```batch
+wget https://docs.tigera.io/files/30-policy.yaml
+calicoctl create -f 30-policy.yaml
+```
 
 :::note
 
 You can also
-[view the manifest in your browser](/network-policy/tutorials/app-layer-policy/manifests/30-policy.yaml/).
+[view the manifest in your browser](/files/30-policy.yaml).
 
 :::
 
