--- a/calico-enterprise_versioned_docs/version-3.15/reference/public-cloud/azure.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/reference/public-cloud/azure.mdx
@@ -11,7 +11,7 @@ You can use {{prodname}} policy with one of the following networking options.
 - **Azure user-defined routes**: This option provides networking without overlays.
   Disable {{prodname}} networking by setting `CALICO_NETWORKING_BACKEND` to `none`
   in `{{nodecontainer}}`. (Also called "policy-only mode".) Refer to
-  [Configuring {{nodecontainer}}](../component-resources/node/configuration.mdx) and [Azure user-defined routes](#azure-user-defined-routes) for more information. If you're on Kubernetes, refer to [Self-managed Kubernetes in Microsoft Azure](/getting-started/install-on-clusters/kubernetes/self-managed-public-cloud/azure/).
+  [Configuring {{nodecontainer}}](../component-resources/node/configuration.mdx) and [Azure user-defined routes](#azure-user-defined-routes) for more information.
 
 - **Calico VXLAN**: Install {{prodname}} using VXLAN encapsulation for pod traffic.
 - **Azure CNI IPAM plug-in**: Configure {{prodname}} to use the
